Use npm run start instead.  Please enter the commit message for your changes. Lines starting

--- a/compose/compose-flow.yml
+++ b/compose/compose-flow.yml
@@ -5,4 +5,4 @@ profiles:
 
 tasks:
   runserver:
-    command: compose-flow compose run --service-ports app npm start
+    command: compose-flow compose run --service-ports app npm run start
